--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Jekyll Test Site
+title: Jekyll Test Site AAA
 email: pmazzini75@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -30,7 +30,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pmazz
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: alainpham/alainpham.github.io
+
 plugins:
   - jekyll-feed
 
